--- a/My-Links/index.html
+++ b/My-Links/index.html
@@ -6,6 +6,7 @@
     <title>My Links</title>
 </head>
 <body>
+    <img src="./Manu - 88.jpg" alt="Imagem do criador da página dos links">
     <h1>Emanuelly de Barros</h1>    
 </body>
 </html>
