--- a/My-Links/index.html
+++ b/My-Links/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>My Links</title>
 </head>
 <body>
     <img src="./Manu - 88.jpg" alt="Imagem do criador da página dos links">
     <h1>Emanuelly de Barros</h1>    
+    <strong>São Paulo, Brasil</strong>
+
+    <p>Desenvolvedora palmeirense</p>
+
+    <a href="https://github.com/login/oauth/authorize?client_id=3f8b8834a91f0caad392&code_challenge=q5m8ar-9FQDlKxV8Wst2BbFAj4n7rzYjDK2WicrjjlU&code_challenge_method=S256&nonce=psWyVkO4kVTb03ng8Z9DYQ&redirect_uri=github%3A%2F%2Fcom.github.android%2Foauth&response_type=code&scope=user+repo+notifications+admin%3Aorg+read%3Adiscussion+user%3Aassets+project+workflow&skip_account_picker=true&state=S4b4rM_0XIBk0Lfuv_PSFQ"
+            target="_blank">Gigthub</a>
+
+        <a href="https://www.instagram.com/manu.bq_?igsh=MXB0NmRucHJzZDB6aA==" target="_blank">Intagram</a>
+
+        <a href="https://www.tiktok.com/@esposa.doveiga23?_t=8kVuqJVgWkY&_r=1" target="_blank">Tiktok</a>
+
+        <a href="https://www.threads.net/@manu.bq_" target="_blank">Threads</a>
+
+        <a href="https://youtube.com/@emanuellydebarrosqueiroz1988?si=e5BMDpAr2htjnNGh">Youtube</a>
+
+
+
+
 </body>
 </html>
